--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="css/lightbox.css" rel="stylesheet">
   <script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
-
+  <link rel="shortcut icon" href="images/window.ico" /> 
 
 
 </head>
