--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="css/aos.css">
 
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="shortcut icon" href="images/window.ico" /> 
 </head>
 
 <body>
