--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+  <a href="#" id="gore" title="Na vrh"></a>
 
   <div class="site-wrap">
 
@@ -97,7 +98,7 @@
         <div class="row align-items-center text-center justify-content-center pt-5">
           <div class="col-md-10 pt-5">
             <span class="sub-text">O nama</span>
-            <h1>UPOZNAJTE NAŠ RAD</h1>
+            <h1>Upoznajte naš rad</h1>
           </div>
         </div>
       </div>
