--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+  <a href="#" id="gore" title="Na vrh"></a>
 
   <div class="site-wrap">
 
@@ -99,7 +100,7 @@
         <div class="row align-items-center text-center justify-content-center pt-5">
           <div class="col-md-10 pt-5">
             <span class="sub-text">Kontakt</span>
-            <h1>KONTAKTIRAJTE NAS</h1>
+            <h1>Kontaktirajte nas</h1>
           </div>
         </div>
       </div>
@@ -216,16 +217,6 @@
                 
               </div>
             </div>
-          </div>
-          <div id="skriveniDiv">
-            
-            <div id="nemanja">
-                <img src="images/nemanja.jpg">
-            </div>
-            <div id="tekst">
-              <h5>Nemanja Velisic 184/17</h5>
-          </div>
-
           </div>
         </div>
         <div class="row pt-5 mt-5 text-center">
