--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-
+  <a href="#" id="gore" title="Na vrh"></a>
   <div class="site-wrap">
 
     <div class="site-mobile-menu">
@@ -107,13 +107,13 @@
       <div class="container">
 
         <div class="row mb-5 d-flex justify-content-center">
-          <div class="col-md-12 d-inline-flex justify-content-center filternav">
-            <button class="brad3 btn btn-light filter-button filterklik" data-id="1" data-filter="hdpe">Staklo za
+          <div id="triBatna" class="col-md-12 d-inline-flex justify-content-center filternav">
+            <!-- <button class="brad3 btn btn-light filter-button filterklik" data-id="1" data-filter="hdpe">Staklo za
               kupatila</button>
             <button class="brad3 btn btn-light filter-button filterklik" data-id="2" data-filter="sprinkle">Staklo za
               kuhinje</button>
             <button class="brad3 btn btn-light filter-button filterklik" data-id="3" data-filter="spray">Staklo za
-              zidove</button>
+              zidove</button> -->
 
           </div>
         </div>
