--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="row align-items-center text-center justify-content-center">
           <div class="col-md-8">
             <span class="sub-text">Ugradnja Kaljenog Stakla</span>
-            <h1 class="text-uppercase">ulepšajte vaše okruženje</h1>
+            <h1>Ulepšajte vaše okruženje</h1>
           </div>
         </div>
       </div>
