--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,7 @@
               <div class="col-lg-12 d-flex justify-content-around ">
                 <div class="row d-flex justify-content-around proizvodiBorder pt-5">
                   <div class="col-lg-6 proizvodiImg mb-5 br3">
-                    <img src="images/staklo_za_kupatilo_tus_kabina_11.jpg" alt="slika1" />
+                    <img src="images/staklo_za_kupatilo_tus_kabina_4.JPG" alt="slika1" />
                   </div>
                   <div class="col-lg-6 card proizvodiText text-black contactCard noBorder bg-white">
                     <div class="card-body no-padding-top">
