--- a/index.html
+++ b/index.html
@@ -132,7 +132,13 @@
         </div>
       </div>
     </div>
+    <div id="novislajder">
+      <img class="aktivna" src="images/stakleni_zidovi_1.jpg" alt="">
+      <img  src="images/stakleni_zidovi_2.jpg" alt="">
+      <img  src="images/stakleni_zidovi_3.jpg" alt="">
+      <img  src="images/stakleni_zidovi_4.jpg" alt="">
 
+    </div>
 
 
 
