--- a/autor.html
+++ b/autor.html
@@ -134,11 +134,12 @@
                   <li><a href="about.html">O nama</a></li>
                   <li><a href="projects.html">Proizvodi</a></li>
                   <li><a href="news.html">Galerija</a></li>
+                  <li><a href="contact.html">Kontakt</a></li>
                 </ul>
               </div>
               <div class="col-md-6 col-lg-6">
                 <ul class="list-unstyled">
-                  <li><a href="contact.html">Kontakt</a></li>
+                  <li><a href="autor.html">O autoru</a></li>
                   <li>jaksicglass@gmail.com</li>
                   <li>061/4580296</li>
                   <li>Jaksic Glass</li>
