--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
       </div>
     </div>
     <div id="novislajder">
-      <img class="aktivna" src="images/stakleni_zidovi_1.jpg" alt="sz1">
-      <img  src="images/stakleni_zidovi_2.jpg" alt="sz2">
-      <img  src="images/stakleni_zidovi_3.jpg" alt="sz3">
-      <img  src="images/stakleni_zidovi_5.jpg" alt="sz4">
+      <img class="aktivna" src="images/stakleni_zidovi_1.JPG" alt="sz1">
+      <img  src="images/stakleni_zidovi_2.JPG" alt="sz2">
+      <img  src="images/stakleni_zidovi_3.JPG" alt="sz3">
+      <img  src="images/stakleni_zidovi_5.JPG" alt="sz4">
 
     </div>
 
