--- a/autor.html
+++ b/autor.html
@@ -135,6 +135,7 @@
                   <li><a href="projects.html">Proizvodi</a></li>
                   <li><a href="news.html">Galerija</a></li>
                   <li><a href="contact.html">Kontakt</a></li>
+                  <li><a href="sitemap.xml">Sitemap</a></li>
                 </ul>
               </div>
               <div class="col-md-6 col-lg-6">
