--- a/projects.html
+++ b/projects.html
@@ -301,6 +301,7 @@
                   <li><a href="about.html">O nama</a></li>
                   <li><a href="projects.html">Proizvodi</a></li>
                   <li><a href="news.html">Galerija</a></li>
+                  <li><a href="sitemap.xml">Sitemap</a></li>
                 </ul>
               </div>
               <div class="col-md-6 col-lg-6">
